# slack-gfm

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: DESIGN.md  QUICK_REFERENCE.md  api-reference.md  user-guide.md
src/slack_gfm/: __init__.py  exceptions.py
src/slack_gfm/ast/: __init__.py  nodes.py  visitor.py
src/slack_gfm/parsers/: __init__.py  gfm.py  mrkdwn.py  rich_text.py
src/slack_gfm/renderers/: __init__.py  gfm.py  gfm_visitor.py  rich_text.py
src/slack_gfm/transformers/: __init__.py  mappings.py
tests/: test_basic_conversions.py  test_edge_cases.py  test_exceptions.py  test_issue_fixes.py  test_parsers.py  test_real_world_cases.py  test_renderers.py  test_transformers.py  test_visitor.py
